# skema

./: MIT-LICENSE  Manifest.txt  README.txt  skema.gemspec
install/templates/: script.sh
lgpl/templates/: file
lib/modules/plasma-applet/: plasma-applet.rb
lib/modules/plasma-applet/templates/: CMakeLists.txt  plasma-app.cpp  plasma-app.h  plasma-applet-app.desktop
plasma-applet/: plasma-applet.rb
plasma-applet/templates/: CMakeLists.txt  plasma-app.cpp  plasma-app.h  plasma-applet-app.desktop
website/: index.txt
